--- a/Lalisa-page/views/aboutus.html
+++ b/Lalisa-page/views/aboutus.html
@@ -124,7 +124,7 @@
                             <div class="box_archivement">
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="20">20+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Years Experience</p>
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="483">483+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Happy Client</p>
@@ -140,7 +140,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">150+</p>
+                                        <p class="title_text" data-stop="150">150+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Project Finished</p>
@@ -367,6 +367,7 @@
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/all.min.js"></script>
     <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/about_us.js"></script>
 </body>
 
 </html>
