--- a/Lalisa-page/views/article.html
+++ b/Lalisa-page/views/article.html
@@ -108,7 +108,7 @@
                                 <a href=""><p class="description_text">Tips and Trick</p></a>
                             </div>
                             <div class="name_blog">
-                                <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                <a href="detail_article.html"><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
                                     Custom Millwork</p></a>
                             </div>
                             <div class="author_blog">
@@ -187,7 +187,7 @@
                                         <a href=""><p class="description_text">Tips and Trick</p></a>
                                     </div>
                                     <div class="name_blog">
-                                        <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                        <a href="detail_article.html"><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
                                             Custom Millwork</p></a>
                                     </div>
                                     <div class="content_blog">
