--- a/Lalisa-page/views/detail_article.html
+++ b/Lalisa-page/views/detail_article.html
@@ -108,61 +108,222 @@
 
         <section class="block_content">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="content">
-                            <p class="description_text">Commodo sodales at eget id dignissim amet consectetur adipiscing
-                                elit. At cursus magna libero turpis scelerisque tristique scelerisque mi. Sed nunc
-                                auctor faucibus vitae. Gravida erat nisi sed vulputate sed cum viverra enim pretium. Sed
-                                nunc consequat, tincidunt pharetra. Mattis quis egestas mi, malesuada morbi morbi
-                                porttitor porttitor. Faucibus nunc, turpis malesuada blandit feugiat porttitor feugiat
-                                pellentesque condimentum. At nisi, cursus sem blandit sed nunc phasellus. Placerat
-                                auctor tincidunt commodo auctor placerat viverra tortor quis eu. Pretium velit eu, massa
-                                tristique congue egestas. In arcu tellus tellus urna, orci gravida etiam velit, viverra.
-                                Convallis nunc sed tellus eget feugiat ultricies purus. Consectetur sollicitudin id eget
-                                facilisis hendrerit nibh.
-                            </p>
-                            <p class="description_text">
-                                Nisi quam mi est et et. Lectus sed imperdiet non vestibulum volutpat tellus odio
-                                aliquam. Eu rutrum tincidunt risus felis sagittis, consequat, iaculis tortor bibendum.
-                                At nisl, diam a sagittis nulla nec at. Faucibus ultricies pharetra, faucibus erat varius
-                                ornare. Viverra pharetra nibh leo et purus in et. Amet felis lectus consectetur duis ut
-                                orci. Sed vitae quam vel pretium urna, duis neque. Vitae commodo interdum adipiscing mi
-                                ultrices. Aliquam risus nibh tincidunt mauris faucibus gravida eleifend.
-                                Ornare tincidunt gravida sed adipiscing vel adipiscing turpis neque elementum. Donec
-                                duis malesuada quam vehicula. Mauris sem tellus vitae cursus pellentesque semper nam est
-                                erat. Vulputate dui nisi neque, morbi mauris id augue. Habitant ultrices egestas vitae
-                                eget mattis ipsum sed. Ornare porttitor lobortis mauris nulla et vitae risus augue
-                                commodo. Nunc placerat nascetur semper est facilisis. Arcu cum aliquam vitae sit
-                                ultrices. Aliquet amet elit nibh sapien a. Id eu sagittis est eu ornare.
-                            </p>
+                <div class="box_1">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="content">
+                                <p class="description_text">Commodo sodales at eget id dignissim amet consectetur
+                                    adipiscing
+                                    elit. At cursus magna libero turpis scelerisque tristique scelerisque mi. Sed nunc
+                                    auctor faucibus vitae. Gravida erat nisi sed vulputate sed cum viverra enim pretium.
+                                    Sed
+                                    nunc consequat, tincidunt pharetra. Mattis quis egestas mi, malesuada morbi morbi
+                                    porttitor porttitor. Faucibus nunc, turpis malesuada blandit feugiat porttitor
+                                    feugiat
+                                    pellentesque condimentum. At nisi, cursus sem blandit sed nunc phasellus. Placerat
+                                    auctor tincidunt commodo auctor placerat viverra tortor quis eu. Pretium velit eu,
+                                    massa
+                                    tristique congue egestas. In arcu tellus tellus urna, orci gravida etiam velit,
+                                    viverra.
+                                    Convallis nunc sed tellus eget feugiat ultricies purus. Consectetur sollicitudin id
+                                    eget
+                                    facilisis hendrerit nibh.
+                                </p>
+                                <p class="description_text">
+                                    Nisi quam mi est et et. Lectus sed imperdiet non vestibulum volutpat tellus odio
+                                    aliquam. Eu rutrum tincidunt risus felis sagittis, consequat, iaculis tortor
+                                    bibendum.
+                                    At nisl, diam a sagittis nulla nec at. Faucibus ultricies pharetra, faucibus erat
+                                    varius
+                                    ornare. Viverra pharetra nibh leo et purus in et. Amet felis lectus consectetur duis
+                                    ut
+                                    orci. Sed vitae quam vel pretium urna, duis neque. Vitae commodo interdum adipiscing
+                                    mi
+                                    ultrices. Aliquam risus nibh tincidunt mauris faucibus gravida eleifend.
+                                    Ornare tincidunt gravida sed adipiscing vel adipiscing turpis neque elementum. Donec
+                                    duis malesuada quam vehicula. Mauris sem tellus vitae cursus pellentesque semper nam
+                                    est
+                                    erat. Vulputate dui nisi neque, morbi mauris id augue. Habitant ultrices egestas
+                                    vitae
+                                    eget mattis ipsum sed. Ornare porttitor lobortis mauris nulla et vitae risus augue
+                                    commodo. Nunc placerat nascetur semper est facilisis. Arcu cum aliquam vitae sit
+                                    ultrices. Aliquet amet elit nibh sapien a. Id eu sagittis est eu ornare.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="content">
+                                <p class="description_text">Faucibus facilisi morbi pharetra quis sed. Vitae suspendisse
+                                    facilisis facilisis ligula felis et a parturient aenean. Ac maecenas ultricies felis
+                                    risus scelerisque duis posuere. Lectus tellus montes, ac sed diam. Habitant amet,
+                                    leo
+                                    cras dui ac eu magna.
+                                    Sed neque lorem mi laoreet orci aliquam maecenas. Molestie enim, nulla egestas id
+                                    metus
+                                    quisque eget. Tempor ante hendrerit venenatis et pellentesque viverra. Ornare mattis
+                                    dui
+                                    viverra suspendisse habitant tempus ornare aliquam. Condimentum tellus cursus diam
+                                    interdum. Quam dictum pellentesque vestibulum mi. Aliquet laoreet sem proin viverra
+                                    nec,
+                                    at. Malesuada aliquam quisque felis, faucibus. Diam duis nunc tincidunt integer
+                                    risus
+                                    sit parturient urna. Etiam sed id nisi, tempus fames. Tempor ultrices massa eleifend
+                                    id
+                                    aliquet integer. Phasellus felis convallis fames habitasse sagittis, dui tellus.
+                                </p>
+                            </div>
+                            <div class="image">
+                                <img src="../assets/img/img_para.png" alt="">
+                            </div>
+                            <div class="author_photo">
+                                <p class="description_text">photography from unsplash</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="content">
-                            <p class="description_text">Faucibus facilisi morbi pharetra quis sed. Vitae suspendisse
-                                facilisis facilisis ligula felis et a parturient aenean. Ac maecenas ultricies felis
-                                risus scelerisque duis posuere. Lectus tellus montes, ac sed diam. Habitant amet, leo
-                                cras dui ac eu magna.
-                                Sed neque lorem mi laoreet orci aliquam maecenas. Molestie enim, nulla egestas id metus
-                                quisque eget. Tempor ante hendrerit venenatis et pellentesque viverra. Ornare mattis dui
-                                viverra suspendisse habitant tempus ornare aliquam. Condimentum tellus cursus diam
-                                interdum. Quam dictum pellentesque vestibulum mi. Aliquet laoreet sem proin viverra nec,
-                                at. Malesuada aliquam quisque felis, faucibus. Diam duis nunc tincidunt integer risus
-                                sit parturient urna. Etiam sed id nisi, tempus fames. Tempor ultrices massa eleifend id
-                                aliquet integer. Phasellus felis convallis fames habitasse sagittis, dui tellus.
-                            </p>
+                </div>
+                <div class="box_2">
+                    <div class="title">
+                        <p class="title_text">Bedroom Collection</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="description_text">Nisi quam mi est et et. Lectus sed imperdiet non vestibulum
+                                volutpat tellus odio aliquam. Eu rutrum tincidunt risus felis sagittis, consequat,
+                                iaculis tortor bibendum. At nisl, diam a sagittis nulla nec at. Faucibus ultricies
+                                pharetra, faucibus erat varius ornare. Viverra pharetra nibh leo et purus in et. Amet
+                                felis lectus consectetur duis ut orci.</p>
                         </div>
-                        <div class="image">
-                            <img src="../assets/img/img_para.png" alt="">
+                        <div class="col-md-6">
+                            <p class="description_text">Praesent tempus vel urna suspendisse cursus. Ac proin vitae
+                                viverra lorem nulla mattis in. Urna diam accumsan quisque adipiscing sagittis, in.
+                                Adipiscing dolor, morbi placerat sit vitae ipsum amet consequat. Imperdiet lacus tempus,
+                                nibh eget metus, sed pellentesque mattis aenean.</p>
                         </div>
-                        <div class="author_photo">
-                            <p class="description_text">photography from unsplash</p>
+                    </div>
+                    <div class="image">
+                        <img src="../assets/img/detail_article.png" alt="">
+                    </div>
+                </div>
+                <div class="box_3">
+                    <div class="title">
+                        <p class="title_text">The Knot</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="description_text">Nisi quam mi est et et. Lectus sed imperdiet non vestibulum
+                                volutpat tellus odio aliquam. Eu rutrum tincidunt risus felis sagittis, consequat,
+                                iaculis tortor bibendum. At nisl, diam a sagittis nulla nec at. Faucibus ultricies
+                                pharetra, faucibus erat varius ornare. Viverra pharetra nibh leo et purus in et. Amet
+                                felis lectus consectetur duis ut orci.</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="description_text">Nisi quam mi est et et. Lectus sed imperdiet non vestibulum
+                                volutpat tellus odio aliquam. Eu rutrum tincidunt risus felis sagittis, consequat,
+                                iaculis tortor bibendum. At nisl, diam a sagittis nulla nec at. Faucibus ultricies
+                                pharetra, faucibus erat varius ornare. Viverra pharetra nibh leo et purus in et. Amet
+                                felis lectus consectetur duis ut orci.</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section> 
+
+        <!-- Similar Topic  -->
+
+        <section class="block_topic">
+            <div class="container">
+                <div class="block_topic_title text-center">
+                    <p class="block_title">Similar Topics</p>
+                </div>
+                <div class="title text-center">
+                    <p class="title_text">Maybe you’re interested</p>
+                </div>
+                <div class="list_topic">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="small_new">
+                                <div class="image">
+                                    <img src="../assets/img/topic.png" alt="">
+                                </div>
+                                <div class="cate_blog">
+                                    <a href=""><p class="description_text">Tips and Trick</p></a>
+                                </div>
+                                <div class="name_blog">
+                                    <a href=""><p class="title_text">Create a non-monotonous and dynamic interior atmosphere with these 9 variations of wall tiles</p></a>
+                                </div>
+                                <div class="content_blog">
+                                    <p class="description_text">Quoted from The Healthy Home Economist, a study in 1932 stated that color doesn't really have to be visible to have an effect
+                                        The radiance of a</p>
+                                </div>
+                                <div class="author_blog">
+                                    <div class="author_avatar">
+                                        <img src="../assets/img/avatar_author.png" alt="">
+                                    </div>
+                                    <p class="title_text">By Juliana Athorn</p>
+                                    <p class="description_text date_create">Friday, 1 April 2022</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="small_new">
+                                <div class="image">
+                                    <img src="../assets/img/topic1.png" alt="">
+                                </div>
+                                <div class="cate_blog">
+                                    <a href=""><p class="description_text">Tips and Trick</p></a>
+                                </div>
+                                <div class="name_blog">
+                                    <a href=""><p class="title_text">20+ Best Kitchen Paint Colors That Make Kitchen Spaces Look More Fun</p></a>
+                                </div>
+                                <div class="content_blog">
+                                    <p class="description_text">Home terrace decorations are part of every decoration or overall home design. Interiordesign.id – If by chance your house has enough space or space.</p>
+                                </div>
+                                <div class="author_blog">
+                                    <div class="author_avatar">
+                                        <img src="../assets/img/avatar_author.png" alt="">
+                                    </div>
+                                    <p class="title_text">By Juliana Athorn</p>
+                                    <p class="description_text date_create">Friday, 1 April 2022</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="small_new">
+                                <div class="image">
+                                    <img src="../assets/img/topic2.png" alt="">
+                                </div>
+                                <div class="cate_blog">
+                                    <a href=""><p class="description_text">Tips and Trick</p></a>
+                                </div>
+                                <div class="name_blog">
+                                    <a href=""><p class="title_text">Modern Minimalist Home Design: Aesthetics of Modern Home Interiors</p></a>
+                                </div>
+                                <div class="content_blog">
+                                    <p class="description_text">Home terrace decorations are part of every decoration or overall home design. Interiordesign.id – If by chance your house has enough space or space.</p>
+                                </div>
+                                <div class="author_blog">
+                                    <div class="author_avatar">
+                                        <img src="../assets/img/avatar_author.png" alt="">
+                                    </div>
+                                    <p class="title_text">By Juliana Athorn</p>
+                                    <p class="description_text date_create">Friday, 1 April 2022</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sub">
+                    <div class="sub_title">
+                        <p class="title_text">Subscribe our newsletter</p>
+                    </div>
+                    <div class="button_talk">
+                        <a href="#" class="btn btn_group">Let’s Talk <img src="../assets/img/arrow-right.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
         </section>
+
     </main>
 
     <footer>
