--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -315,7 +315,7 @@
                             <div class="box_archivement_mobile">
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="20">20+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Years Experience</p>
@@ -323,7 +323,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="483">483+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Happy Client</p>
@@ -331,7 +331,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">150+</p>
+                                        <p class="title_text" data-stop="150">150+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Project Finished</p>
@@ -347,7 +347,7 @@
                             <div class="box_archivement">
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="20">20+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Years Experience</p>
@@ -355,7 +355,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">20+</p>
+                                        <p class="title_text" data-stop="483">483+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Happy Client</p>
@@ -363,7 +363,7 @@
                                 </div>
                                 <div class="small_box_archivement">
                                     <div class="num_archivement">
-                                        <p class="title_text">150+</p>
+                                        <p class="title_text" data-stop="150">150+</p>
                                     </div>
                                     <div class="detail_archivement">
                                         <p class="description_text">Project Finished</p>
