--- a/Lalisa-page/views/aboutus.html
+++ b/Lalisa-page/views/aboutus.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="box_vid">
                     <video poster="../assets/img/video.png" controls>
-                        
+                        <source src="" type="video/mp4">
                     </video>
                 </div>
             </div>
