--- a/Lalisa-page/views/article.html
+++ b/Lalisa-page/views/article.html
@@ -87,6 +87,9 @@
     </header>
 
     <main>
+
+        <!-- Start:Banner  -->
+        
         <section class="block_banner">
             <div class="container">
                 <div class="box_banner_text">
@@ -163,10 +166,10 @@
                     </div>
                     </div>
                 </div>
-                
-
             </div>
         </section>
+        <!-- End: Banner  -->
+        <!-- Start: News  -->
         <section class="block_news">
             <div class="container">
                 <div class="title">
@@ -229,10 +232,11 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
+        <!-- End: New  -->
 
+        <!-- Start Trending  -->
         <section class="block_trending">
             <div class="container">
                 <div class="title">
@@ -352,6 +356,7 @@
                 </div>
             </div>
         </section>
+        <!-- End : Trending  -->
     </main>
 
     <footer>
