--- a/Lalisa-page/views/detail_article.html
+++ b/Lalisa-page/views/detail_article.html
@@ -105,7 +105,9 @@
                 </div>
             </div>
         </section>
+        <!-- End Banner  -->
 
+        <!-- Start Content  -->
         <section class="block_content">
             <div class="container">
                 <div class="box_1">
@@ -228,6 +230,8 @@
             </div>
         </section> 
 
+        <!-- End Content  -->
+
         <!-- Similar Topic  -->
 
         <section class="block_topic">
@@ -349,7 +353,7 @@
                                     <p class="description_text">Best Selling</p>
                                 </a>
                                 <a href="#">
-                                    <p class="description_text">Home Decor</p>
+                                    <p class="description_text">Home Decor</p> 
                                 </a>
                                 <a href="#">
                                     <p class="description_text">Kitchen Set</p>
