--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -96,6 +96,7 @@
                 <div class="box_banner_text">
                     <div class="banner_title">
                         <h1 class="banner_title_text title_text">Discover Furniture With High Quality Wood</h1>
+                        <img src="../assets/img/vector_left.png" alt="">
                     </div>
                     <div class="banner_des">
                         <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum
