--- a/Lalisa-page/assets/css/detail_product.css
+++ b/Lalisa-page/assets/css/detail_product.css
@@ -8,9 +8,12 @@
 }
 .block_header {
   border-bottom: 2px solid #F3F3F3;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 99;
+  background-color: #ffffff;
 }
 
 .navbar {
@@ -64,7 +67,7 @@ li.nav-item .nav-link {
 }
 .sidenav .options_navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 .sidenav .item_close {
   width: 100%;
@@ -77,6 +80,10 @@ li.nav-item .nav-link {
   margin-left: 50px;
 }
 
+main {
+  margin-top: 205px;
+}
+
 @media (max-width: 992px) {
   .navbar-expand-lg {
     padding: 15px;
@@ -86,6 +93,9 @@ li.nav-item .nav-link {
   }
   .navbar-expand-lg .navbar-nav li.nav-item {
     margin-right: 0px;
+  }
+  main {
+    margin-top: 155px;
   }
 }
 body {
