--- a/Lalisa-page/assets/css/index.css
+++ b/Lalisa-page/assets/css/index.css
@@ -8,9 +8,12 @@
 }
 .block_header {
   border-bottom: 2px solid #F3F3F3;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 99;
+  background-color: #ffffff;
 }
 
 .navbar {
@@ -64,7 +67,7 @@ li.nav-item .nav-link {
 }
 .sidenav .options_navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 .sidenav .item_close {
   width: 100%;
@@ -77,6 +80,10 @@ li.nav-item .nav-link {
   margin-left: 50px;
 }
 
+main {
+  margin-top: 205px;
+}
+
 @media (max-width: 992px) {
   .navbar-expand-lg {
     padding: 15px;
@@ -86,6 +93,9 @@ li.nav-item .nav-link {
   }
   .navbar-expand-lg .navbar-nav li.nav-item {
     margin-right: 0px;
+  }
+  main {
+    margin-top: 155px;
   }
 }
 body {
@@ -172,8 +182,17 @@ a:hover {
   text-align: center;
   margin: auto;
 }
-.box_banner_text .banner_title_text {
+.box_banner_text .banner_title {
+  position: relative;
+}
+.box_banner_text .banner_title .banner_title_text {
   font-size: 64px;
+}
+.box_banner_text .banner_title img {
+  position: absolute;
+  left: -15%;
+  max-width: 142px;
+  max-height: 165px;
 }
 
 .banner_search {
@@ -727,11 +746,14 @@ a:hover {
     padding: 15px 26px;
     font-size: 14px;
   }
-  .block_header {
-    padding: 20px 0;
-  }
   .box_banner_text .banner_title_text {
-    font-size: 26px;
+    font-size: 26px !important;
+  }
+  .box_banner_text img {
+    left: -20px !important;
+    max-width: 80px !important;
+    max-height: 82px !important;
+    top: 20px;
   }
   .box_banner_photo {
     margin-top: 30px;
