--- a/Lalisa-page/assets/scss/header.scss
+++ b/Lalisa-page/assets/scss/header.scss
@@ -1,8 +1,11 @@
 .block_header {
     border-bottom: 2px solid #F3F3F3;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 99;
+    background-color: #ffffff;
 }
 
 .navbar {
@@ -60,7 +63,7 @@ li.nav-item .nav-link {
 
     .options_navbar {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
     } 
 
     .item_close {
@@ -76,6 +79,10 @@ li.nav-item .nav-link {
     }
 }
 
+main {
+    margin-top: 205px;
+}
+
 @media (max-width: 992px) {
     .navbar-expand-lg {
         padding: 15px;
@@ -88,4 +95,9 @@ li.nav-item .nav-link {
             }
         }
     }
+
+    main {
+        margin-top: 155px;
+    }
 }
+
