fix background cover when navbar mobile show

--- a/Lalisa-page/assets/scss/header.scss
+++ b/Lalisa-page/assets/scss/header.scss
@@ -79,6 +79,16 @@ li.nav-item .nav-link {
     }
 }
 
+.cover_body {
+    display: none;
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(59, 59, 59, 0.85);
+}
+
 main {
     margin-top: 205px;
 }
