--- a/Lalisa-page/assets/css/detail_product.css
+++ b/Lalisa-page/assets/css/detail_product.css
@@ -80,6 +80,16 @@ li.nav-item .nav-link {
   margin-left: 50px;
 }
 
+.cover_body {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(59, 59, 59, 0.85);
+}
+
 main {
   margin-top: 205px;
 }
