--- a/Lalisa-page/views/detail_article.html
+++ b/Lalisa-page/views/detail_article.html
@@ -81,6 +81,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="cover_body"></div>
                 </nav>
             </div>
         </div>
