--- a/Lalisa-page/views/detail_product.html
+++ b/Lalisa-page/views/detail_product.html
@@ -82,6 +82,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="cover_body"></div>
                 </nav>
             </div>
         </div>
